# gb2taxonomy

./: .gitignore  BUGS.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_gene_dict_v2.py  compare_phyllodocida.py  compare_results.py  create_ncbi_template.py  download_by_accession.py  download_edirect.sh  download_entrez.py  download_requests.py  generate_ncbi_update.py  merge_literature_metadata.py  validate_against_excel.py
scripts/docs/: ncbi_source_modifiers_reference.md  ncbi_submission_template.xlsx
src/g2t/: __init__.py  _cli.py  _pipeline.py  classify.py  extract.py  organize.py  utils.py  voucher.py
src/g2t/data/: gene_dict.yaml
tests/: conftest.py  test_classify_match.py  test_exceptions.py  test_organize.py  test_pipeline.py  test_utils.py  test_voucher.py
